# cody_emulator

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: rust.yml
_payloads/: codymelody.asm
single_step_tests/: .gitignore  Cargo.toml  README.md
single_step_tests/src/: lib.rs  main.rs
src/: assembler.rs  cpu.rs  frontend.rs  interrupt.rs  lib.rs  main.rs  memory.rs  opcode.rs  shader.wgsl  vid.rs
src/device/: blanking.rs  keyboard.rs  mod.rs  shader.wgsl  uart.rs  via.rs  vid.rs
src/device/audio/: core.rs  engine.rs  factory.rs  fx.rs  host.rs  mmiodev.rs  mod.rs  post_buffer_policy.rs  post_resampler.rs  postprocess.rs  queue.rs  registers.rs  source.rs  synth.rs
src/memory/: contiguous.rs  logging.rs  mapped.rs  mod.rs  zero.rs
tests/: assembler.rs  audio_components.rs  lib.rs
tests/opcode/: adc.rs  cmp.rs  mod.rs  sbc.rs  sbc_decimal.rs
