[package]
name = "cody_emulator"
version = "0.1.0"
authors = ["iTitus"]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/iTitus/cody_emulator"
license = "MIT"

[dependencies]
bitfields = "0.12"
lazy_static = "1.5"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"

# graphics
bytemuck = { version = "1.22", features = ["latest_stable_rust"] }
glam = { version = "0.30", features = ["bytemuck"] }
env_logger = "0.11"
pollster = "0.4"
wgpu = "24.0"
winit = "0.30"
