[package]
name = "cody_emulator"
version = "0.1.0"
authors = ["iTitus"]
edition = "2024"
rust-version = "1.90"
repository = "https://github.com/iTitus/cody_emulator"
license = "MIT"

[dependencies]
bitfields = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap-num = "1.2"
env_logger = "0.11"
itertools = "0.14"
lazy_static = "1.5"
log = "0.4"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"

# graphics
bytemuck = { version = "1.23", features = ["latest_stable_rust"] }
glam = { version = "0.30", features = ["bytemuck"] }
pollster = "0.4"
wgpu = "27.0"
winit = "0.30"
