[package]
name = "cody_emulator"
version = "0.1.0"
authors = ["iTitus"]
edition = "2024"
rust-version = "1.88" # let chains
repository = "https://github.com/iTitus/cody_emulator"
license = "MIT"

[workspace]
resolver = "3"
members = ["single_step_tests"]

[dependencies]
bitfields = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap-num = "1.2"
env_logger = "0.11"
itertools = "0.14"
lazy_static = "1.5"
log = "0.4"
num_enum = "0.7"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"

# graphics
bytemuck = { version = "1.24", features = ["derive"] }
pixels = "0.15"
winit = "0.30"
winit_input_helper = "0.17"

[profile.release]
lto = true
codegen-units = 1
